--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 tasks.named('bootBuildImage') {
     builder = 'paketobuildpacks/builder-jammy-base:latest'
 }
-
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
